- SqlFluent と ExtractionCondition の分離 - Arrays.asList -> List.of への変更 - テストの整形